--- a/contato.html
+++ b/contato.html
@@ -66,6 +66,25 @@
             
             <input type="submit" value="Enviar formulário">
         </form>
+        <table>
+            <thead>
+                <tr>
+                   <th>Dia</th>
+                   <th>Horário</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                   <td>Segunda</td>
+                   <td>8h ~ 20h</td>
+                </tr>
+                <tr>
+                   <td>Terça</td>
+                   <td>8h ~20h</td>
+                </tr>
+       
+            </tbody>
+        </table>
     </main>
     <footer> 
         <img src="logo.jpg">
